syntax = "proto3"; // Specify compiler version

package p2p;

service P2P {
    rpc ConnectedPeers(GeneralRequest) returns (GeneralResponse) {} // Get the number of connected peers.
    rpc SyncNetwork(GeneralRequest) returns (GeneralResponse) {} // Manually sync the working network.
}

/* BEGIN REQUESTS */

message GeneralRequest {
    string network = 1; // Network
}

/* END REQUESTS */

/* BEGIN RESPONSES */

message GeneralResponse {
    string message = 1; // Response
}

/* END RESPONSES */